--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-streamlit
-requests
-beautifulsoup4
-lxml
-spacy
-PyPDF2
-PyMuPDF
-python-docx
-openai
-python-dotenv
+streamlit>=1.36
+requests>=2.31
+beautifulsoup4>=4.12
+lxml>=4.9
+spacy==3.7.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+PyPDF2>=3.0.1
+PyMuPDF==1.24.9
+python-docx>=1.1.2
+openai>=1.30.0
+python-dotenv>=1.0.1
+urllib3<2.3
